fix(`Card`): add `flex` & `align-center` to `Card.Footer` and `Card.Header`

--- a/src/card/styles.css
+++ b/src/card/styles.css
@@ -22,6 +22,8 @@
     .card-footer,
     .card-header {
         height: var(--card-bar-height);
+        display: flex;
+        align-items: center;
     }
 
     .card-body {
